--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Download the Texture Pack Here:</h1>
-        <a href="your-download-link.zip" class="download-button" download>Download Now</a>
+        <a href="Potato2.0.zip" class="download-button" download>Download Now</a>
     </div>
 </body>
 </html>
