--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Download the Texture Pack Here:</h1>
+        <h1>Download the Texture Pack Here
+            and make sure to unzip it:</h1>
         <a href="Potato2.0.zip" class="download-button" download>Download Now</a>
     </div>
 </body>
