--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Download the Texture Pack Here
             and make sure to unzip it:</h1>
-        <a href="Potato2.0.zip" class="download-button" download>Download Now</a>
+        <a href="Potatospack-default.zip" class="download-button" download>Download Now</a>
     </div>
 </body>
 </html>
