--- a/main.html
+++ b/main.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,8 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Download the Texture Pack Here:</h1>
-        <a href="Potato2.0.zip" class="download-button" download>Download Now</a>
+        <h1>Download the Texture Pack Here
+            and make sure to unzip it:</h1>
+        <a href="Potatospack-default.zip" class="download-button" download>Download Now</a>
     </div>
 </body>
 </html>
