--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Download the Texture Pack Here
+        <h1>Download the Texture Pack Here,
             and make sure to unzip it:</h1>
         <a href="Potatospack-default.zip" class="download-button" download>Download Now</a>
     </div>
