--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download the Texture Pack</title>
+    <title>Download Texture Pack</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Download the Texture Pack Here,
-            and make sure to unzip it:</h1>
+        <h1>Download the Texture Pack</h1>
+        <p>Click the button below to download the texture pack. Once downloaded, make sure to extract (unzip) the file before using it.</p>
         <a href="Potatospack-default.zip" class="download-button" download>Download Now</a>
     </div>
 </body>
