--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="container">
         <h1>Download the Texture Pack</h1>
         <p>Click the button below to download the texture pack. Once downloaded, make sure to extract (unzip) the file before using it.</p>
-        <a href="Potatospack-default.zip" class="download-button" download>Download Now</a>
+        <!-- Download Button with "Now" Text Included -->
+        <a href="Potatospack-default.zip" class="download-button" download>
+            Download <span class="now-text">Now</span>
+        </a>
     </div>
 </body>
 </html>
