--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download Texture Pack</title>
+    <title>Download Texture Packs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Download the Texture Pack</h1>
-        <p>Click the button below to download the texture pack. Once downloaded, make sure to extract (unzip) the file before using it.</p>
-        <a href="Potatospack-default.zip" class="download-button" download>
-            Download <span class="now-text">Now</span>
+        <h1>Download Texture Packs</h1>
+        <p>Click the buttons below to download your desired texture pack. Make sure to extract (unzip) the file before using it.</p>
+
+        <!-- Standard Pack Button -->
+        <a href="Potatospack-default.zip" class="download-button download-default" download>
+            Download Standard Pack
+        </a>
+
+        <!-- X-Ray Pack Button -->
+        <a href="Potatospack-xray.zip" class="download-button download-xray" download>
+            Download X-Ray Pack
         </a>
     </div>
 </body>
